# srds

./: .gitignore
sgx-srdsserver/: AAA.txt  Makefile  README.md  SGXSRDSServerApp  ab-benchmark.txt  apply_profile.py  exp-benchmark-SGX.sh  exp-benchmark-noSGX.sh  exp-benchmark.sh  exp-copy-results.sh  exp-fast-update.sh  exp-nucs-addr.sh  exp-reboot-nucs.sh  exp-relaunch.sh  exp-replace-addr.py  exp-scripted-benchmark.sh  exp-setup.sh  exp-stop.sh  exp-update-all.sh  log.txt  logs.txt  logserver.js  out.out  package-lock.json  profiles.csv  profiles.txt  report.lua  request.sh  routes.js  scripts.txt  setup-env.sh  start-benchmark-SGX.sh  start-benchmark-noSGX.sh  start-benchmark.sh  start-client.sh  start-content-server.sh  start-tracker.sh  stop-client.sh  test-encryption.py  tracker.js  (+1 more)
sgx-srdsserver/SGXSRDSEnclave/: SGXSRDSEnclave.config.xml  SGXSRDSEnclave.cpp  SGXSRDSEnclave.cpp.orig  SGXSRDSEnclave.edl
sgx-srdsserver/SGXSRDSServer/: SGXSRDSEnclave_u.c  SGXSRDSEnclave_u.h  SGXSRDSServer.cpp  client.cpp  client.h  common_socket.cpp  common_socket.h  http_header.h  message_management.cpp  message_management.h  server.cpp  server.h  trackerdb.cpp  trackerdb.h
sgx-srdsserver/blockchain/: .~lock.streamcoin_integration.docx#  hex.txt  private.txt  private8.txt  public.txt  (+2 more)
srdsserver/: .gitignore  CMakeLists.txt  README.md  init.sh  main.cpp  request.sh
srdsserver/src/: client.cpp  client.h  common_socket.cpp  common_socket.h  http_header.cpp  http_header.h  message_management.cpp  message_management.h  server.cpp  server.h  trackerdb.cpp  trackerdb.h
